[package]
name = "webflow-to-directus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
csv = "1.1"
log = "0.4"
env_logger = "0.9"
convert_case = "0.6.0"
sea-orm = { version = "^0.11.3", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
futures = "0.3.21"